...
                child: Text('Cancelar'),
                onPressed: () {
                  Navigator.pop(context);
                },
              ),
              TextButton(
                child: Text('Adicionar'),
                onPressed: () async {
                  if (_formKey.currentState!.validate()) {
                    widget.onSave();
                    Navigator.popUntil(context,
                        ModalRoute.withName(EnterpriseListScreen.name));
                  }
...
