...
                        content: Text('Código inválido!'),
                      ),
                    );
                  }
                },
                child: const Text(
                  'ADICIONAR',
                  style: TextStyle(fontSize: 16),
                ),
              ),
            ),
          ],
        ),
...
